Finished non-vectorized card encoder

--- a/STSFightPredictor.ipynb
+++ b/STSFightPredictor.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "STSFightPredictor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOoo2KiL1dvkuX7CCOjwUg0",
+      "private_outputs": true,
+      "authorship_tag": "ABX9TyMiuZArXukEAZdsz2YLDECa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,116 +132,63 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "qZfcBL7gwCgV",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 800
-        },
-        "outputId": "139b82cc-49c2-4744-cf4b-5fe86ae2de6a"
+        "id": "wF0lHAf6yT2U",
+        "colab_type": "text"
       },
       "source": [
-        "def generalize_strikes_and_defends(cards):\n",
-        "  for i, s in enumerate(cards):\n",
-        "    if s.startswith('Strike_') or s.startswith('Defend_'):\n",
-        "      cards[i] = s[:-2]\n",
+        "### Pre-Process with Loops\n",
         "\n",
-        "# def encode_cards(cards):\n",
-        "#   print(cards)\n",
-        "#   generalize_strikes_and_defends(cards)\n",
-        "#   label_encoder = LabelEncoder()\n",
-        "#   onehot_encoder = OneHotEncoder(categories=[range(714)], sparse=False)\n",
-        "#   le = label_encoder.fit(ALL_CARDS)\n",
-        "#   integer_encoded = le.transform(cards)\n",
-        "#   print(f'non-binary {integer_encoded}')\n",
-        "#   integer_encoded = integer_encoded.reshape(len(integer_encoded), 1)\n",
-        "#   print(f'binary integer encoded {integer_encoded}')\n",
-        "#   onehot_encoded = onehot_encoder.fit_transform(integer_encoded)\n",
-        "#   print(f'one-hot {onehot_encoded}')\n",
-        "#   print(onehot_encoded[0][607])\n",
+        "Iterate through each training example and turn each field in the json data into each part of the vector needed for training.\n",
         "\n",
-        "def encode_cards(cards):\n",
-        "  print(cards)\n",
-        "  cards = np.array(cards)\n",
-        "  generalize_strikes_and_defends(cards)\n",
-        "  onehot_encoder = OneHotEncoder(categories=[ALL_CARDS], sparse=False)\n",
-        "  # print(onehot_encoder.categories[0].index('Clothesline'))\n",
-        "  integer_encoded = cards.reshape(len(cards), 1)\n",
-        "  print(integer_encoded.shape)\n",
-        "  onehot_encoded = onehot_encoder.fit_transform(integer_encoded)\n",
-        "  print(f'one-hot {onehot_encoded}')\n",
-        "  print(onehot_encoded[0][607])\n",
-        "  # Strike = 607, Defend 192, Clothesline 129\n",
-        "  summed = np.sum(onehot_encoded, axis=0)\n",
-        "  print(summed)\n",
-        "\n",
-        "encode_cards(json_data[0]['cards'])"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['Strike', 'Strike', 'Strike', 'Strike', 'Defend', 'Defend', 'Defend', 'Defend', 'Strike', 'Bash', 'AscendersBane', 'Clothesline']\n",
-            "(12, 1)\n",
-            "one-hot [[0. 0. 0. ... 0. 0. 0.]\n",
-            " [0. 0. 0. ... 0. 0. 0.]\n",
-            " [0. 0. 0. ... 0. 0. 0.]\n",
-            " ...\n",
-            " [0. 0. 0. ... 0. 0. 0.]\n",
-            " [0. 0. 0. ... 0. 0. 0.]\n",
-            " [0. 0. 0. ... 0. 0. 0.]]\n",
-            "1.0\n",
-            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 4. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 5. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-            " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            "5.0\n",
-            "4.0\n",
-            "0.0\n",
-            "1.0\n"
-          ],
-          "name": "stdout"
-        }
+        "This will later be optomized into vectorized code."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Ee9xn9lzzEB",
+        "id": "qZfcBL7gwCgV",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "def generalize_strikes_and_defends(cards):\n",
+        "  \"\"\"\n",
+        "  Modifies any character specific Strikes and Defends (eg. Strike_R) into\n",
+        "  general Strikes and Defends(Strike)\n",
+        "  \"\"\"\n",
+        "  for i, s in enumerate(cards):\n",
+        "    if s.startswith('Strike_') or s.startswith('Defend_'):\n",
+        "      cards[i] = s[:-2]\n",
+        "\n",
+        "def encode_cards(cards):\n",
+        "  \"\"\"\n",
+        "  Encodes a list of cards into a modified one-hot vector where each index\n",
+        "  represents the number of that card in the deck\n",
+        "  \"\"\"\n",
+        "  cards = np.array(cards)\n",
+        "  generalize_strikes_and_defends(cards)\n",
+        "  onehot_encoder = OneHotEncoder(categories=[ALL_CARDS], sparse=False)\n",
+        "  integer_encoded = cards.reshape(len(cards), 1)\n",
+        "  onehot_encoded = onehot_encoder.fit_transform(integer_encoded)\n",
+        "  summed = np.sum(onehot_encoded, axis=0)\n",
+        "  print(summed.shape)\n",
+        "  return summed"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tz1rMjuszNY0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def encode_relics(relics):\n",
+        "  pass"
       ],
       "execution_count": 0,
       "outputs": []
