--- a/STSFightPredictor.ipynb
+++ b/STSFightPredictor.ipynb
@@ -6,7 +6,7 @@
       "name": "STSFightPredictor.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyN0Cc06xrZe+cSeTQabmCpt",
+      "authorship_tag": "ABX9TyODglR1dG/+3rMeXYDH37HW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,8 @@
         "\n",
         "with urllib.request.urlopen(\"https://raw.githubusercontent.com/alexdriedger/SlayTheSpireFightPredictor/master/out/data.json\") as url:\n",
         "    json_data = json.loads(url.read().decode())\n",
-        "    print(json_data)"
+        "    print(json_data)\n",
+        "    print(f'Data has {len(json_data)} samples.')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -279,6 +280,9 @@
       },
       "source": [
         "def encode_sample_with_loop(sample):\n",
+        "  \"\"\"\n",
+        "  Encode a single sample into a 1D vector\n",
+        "  \"\"\"\n",
         "  cards = encode_cards(sample['cards'])\n",
         "  relics = encode_relics(sample['relics'])\n",
         "  encounter = encode_encounter(sample['enemies'])\n",
@@ -316,13 +320,128 @@
       },
       "source": [
         "def preprocess_with_loop(data):\n",
+        "  \"\"\"\n",
+        "  Pre-processes the data one sample at a time using loops.\n",
+        "  X has shape: (num_samples, training_vec_len)\n",
+        "  Y has shape: (num_samples)\n",
+        "  \"\"\"\n",
         "  processed_samples = []\n",
+        "  y = []\n",
         "  for sample in data:\n",
         "    processed_samples.append(encode_sample_with_loop(sample))\n",
-        "  stacked = np.vstack(processed_samples)\n",
-        "  return stacked\n",
+        "    y.append(sample['damage_taken'])\n",
+        "  X = np.vstack(processed_samples)\n",
+        "  Y = np.array(y)\n",
+        "  Y[Y < 0] = 0\n",
+        "  return X, Y\n",
         "\n",
-        "preprocess_with_loop(json_data)"
+        "X, Y = preprocess_with_loop(json_data)\n",
+        "print(X.shape)\n",
+        "print(Y.shape)\n",
+        "print(X)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xC-yUE1dFtzj",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Deep Learning\n",
+        "\n",
+        "The fun of the project! 😃 Let's build and training our model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v_lJoIQFEDxy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rrcM7Bqk5Sem",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# (x_train_mnist, y_train_mnist), (x_test_mnist, y_test_mnist) = keras.datasets.mnist.load_data()\n",
+        "# x_train_mnist = x_train_mnist.reshape(60000, 784).astype(\"float32\") / 255\n",
+        "# print(x_train_mnist.shape)\n",
+        "# print(y_train_mnist.shape)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4aP5ztxxzjeh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x_train = X[:1200]\n",
+        "y_train = Y[:1200]\n",
+        "x_test = X[1200:]\n",
+        "y_test = Y[1200:]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U3qpj7egwxeo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "inputs = keras.Input(shape=(975,))\n",
+        "inputs.shape\n",
+        "\n",
+        "x = layers.Dense(256, activation=\"relu\")(inputs)\n",
+        "x = layers.Dense(128, activation=\"relu\")(x)\n",
+        "x = layers.Dense(64, activation=\"relu\")(x)\n",
+        "x = layers.Dense(16, activation=\"relu\")(x)\n",
+        "outputs = layers.Dense(1, activation=\"relu\")(x)\n",
+        "\n",
+        "model = keras.Model(inputs=inputs, outputs=outputs, name=\"first_attempt_model\")\n",
+        "model.summary()\n",
+        "\n",
+        "model.compile(optimizer=keras.optimizers.RMSprop(learning_rate=.1), loss=tf.keras.losses.MeanSquaredError(), metrics=[\"accuracy\"])\n",
+        "\n",
+        "history = model.fit(x_train, y_train, batch_size=16, epochs=4, validation_split=0.2)\n",
+        "test_scores = model.evaluate(x_test, y_test, verbose=2)\n",
+        "print(test_scores)\n",
+        "print(\"Test loss:\", test_scores[0])\n",
+        "print(\"Test accuracy:\", test_scores[1])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F1Nga2iI2nnf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
