Loss is 7 hp difference on average

--- a/STSFightPredictor.ipynb
+++ b/STSFightPredictor.ipynb
@@ -6,7 +6,7 @@
       "name": "STSFightPredictor.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyODglR1dG/+3rMeXYDH37HW",
+      "authorship_tag": "ABX9TyPxd9tt79bhbNN3yQmoQo/4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,14 +331,8 @@
         "    processed_samples.append(encode_sample_with_loop(sample))\n",
         "    y.append(sample['damage_taken'])\n",
         "  X = np.vstack(processed_samples)\n",
-        "  Y = np.array(y)\n",
-        "  Y[Y < 0] = 0\n",
-        "  return X, Y\n",
-        "\n",
-        "X, Y = preprocess_with_loop(json_data)\n",
-        "print(X.shape)\n",
-        "print(Y.shape)\n",
-        "print(X)"
+        "  Y = np.array(y, dtype='float64')\n",
+        "  return X, Y"
       ],
       "execution_count": 0,
       "outputs": []
@@ -365,23 +359,8 @@
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rrcM7Bqk5Sem",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# (x_train_mnist, y_train_mnist), (x_test_mnist, y_test_mnist) = keras.datasets.mnist.load_data()\n",
-        "# x_train_mnist = x_train_mnist.reshape(60000, 784).astype(\"float32\") / 255\n",
-        "# print(x_train_mnist.shape)\n",
-        "# print(y_train_mnist.shape)"
+        "from tensorflow.keras import layers\n",
+        "from sklearn.preprocessing import MaxAbsScaler"
       ],
       "execution_count": 0,
       "outputs": []
@@ -394,10 +373,27 @@
         "colab": {}
       },
       "source": [
+        "X, Y = preprocess_with_loop(json_data)\n",
+        "\n",
+        "# Scale Y\n",
+        "Y /= 100\n",
+        "# To allow healing (negative damage), uncomment `Y[Y < -1] = -1` and comment out `Y[Y < 0] = 0`\n",
+        "# Y[Y < -1] = -1\n",
+        "Y[Y < 0] = 0\n",
+        "Y[Y > 1] = 1\n",
+        "\n",
+        "# Split into training and test data\n",
         "x_train = X[:1200]\n",
         "y_train = Y[:1200]\n",
         "x_test = X[1200:]\n",
-        "y_test = Y[1200:]"
+        "y_test = Y[1200:]\n",
+        "\n",
+        "# Scale inputs and keep sparcity\n",
+        "max_abs_scaler = MaxAbsScaler()\n",
+        "X_train_maxabs = max_abs_scaler.fit_transform(x_train)\n",
+        "X_test_maxabs = max_abs_scaler.transform(x_test)\n",
+        "\n",
+        "# print(max_abs_scaler.scale_) # Used for scaling future inputs"
       ],
       "execution_count": 0,
       "outputs": []
@@ -410,23 +406,22 @@
         "colab": {}
       },
       "source": [
-        "inputs = keras.Input(shape=(975,))\n",
-        "inputs.shape\n",
+        "model = tf.keras.models.Sequential([\n",
+        "  tf.keras.layers.Dense(256, input_shape=(975,), activation='relu'),\n",
+        "  tf.keras.layers.Dropout(.2),\n",
+        "  tf.keras.layers.Dense(128, activation='relu'),\n",
+        "  tf.keras.layers.Dropout(.2),\n",
+        "  tf.keras.layers.Dense(64, activation='relu'),\n",
+        "  tf.keras.layers.Dense(16, activation='relu'),\n",
+        "  tf.keras.layers.Dense(1)\n",
+        "])\n",
         "\n",
-        "x = layers.Dense(256, activation=\"relu\")(inputs)\n",
-        "x = layers.Dense(128, activation=\"relu\")(x)\n",
-        "x = layers.Dense(64, activation=\"relu\")(x)\n",
-        "x = layers.Dense(16, activation=\"relu\")(x)\n",
-        "outputs = layers.Dense(1, activation=\"relu\")(x)\n",
-        "\n",
-        "model = keras.Model(inputs=inputs, outputs=outputs, name=\"first_attempt_model\")\n",
         "model.summary()\n",
+        "model.compile(optimizer=keras.optimizers.RMSprop(learning_rate=.001), loss=tf.keras.losses.MeanAbsoluteError(), metrics=[\"accuracy\"])\n",
         "\n",
-        "model.compile(optimizer=keras.optimizers.RMSprop(learning_rate=.1), loss=tf.keras.losses.MeanSquaredError(), metrics=[\"accuracy\"])\n",
+        "history = model.fit(X_train_maxabs, y_train, batch_size=16, epochs=4, validation_split=0.2)\n",
+        "test_scores = model.evaluate(X_test_maxabs, y_test, verbose=2)\n",
         "\n",
-        "history = model.fit(x_train, y_train, batch_size=16, epochs=4, validation_split=0.2)\n",
-        "test_scores = model.evaluate(x_test, y_test, verbose=2)\n",
-        "print(test_scores)\n",
         "print(\"Test loss:\", test_scores[0])\n",
         "print(\"Test accuracy:\", test_scores[1])"
       ],
@@ -441,7 +436,14 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Manually looking at test predictions vs actual number\n",
+        "num_test = 50\n",
+        "pred = model.predict(X_test_maxabs[:num_test])\n",
+        "pred_actual = y_test[:num_test]\n",
+        "pred_actual = pred_actual[..., np.newaxis]\n",
+        "out = np.concatenate((pred, pred_actual), axis=1)\n",
+        "np.set_printoptions(precision=3, suppress=True)\n",
+        "print(out)"
       ],
       "execution_count": 0,
       "outputs": []
