Save Model to File

--- a/STSFightPredictor.ipynb
+++ b/STSFightPredictor.ipynb
@@ -6,7 +6,8 @@
       "name": "STSFightPredictor.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPxd9tt79bhbNN3yQmoQo/4",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOo/WecqUZQOnt4eSpxT6pQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Download Data Set\n",
+        "# Download Data Set\n",
         "\n",
         "Grab the json data set from GitHib"
       ]
@@ -63,7 +64,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Pre-Process Data\n",
+        "# Pre-Process Data\n",
         "\n",
         "Load the json training examples and process them into vectors that can be used in a neural network"
       ]
@@ -152,7 +153,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Pre-Process with Loops\n",
+        "## Pre-Process with Loops\n",
         "\n",
         "Iterate through each training example and turn each field in the json data into each part of the vector needed for training.\n",
         "\n",
@@ -344,7 +345,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Deep Learning\n",
+        "# Deep Learning\n",
         "\n",
         "The fun of the project! 😃 Let's build and training our model"
       ]
@@ -360,10 +361,23 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
-        "from sklearn.preprocessing import MaxAbsScaler"
+        "from sklearn.preprocessing import MaxAbsScaler\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F3a5NzjAhItw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Scaling and Spliting Data\n",
+        "\n",
+        "Spliting the data into training and test set and scaling the features and labels to be between 0 and 1"
+      ]
     },
     {
       "cell_type": "code",
@@ -383,20 +397,27 @@
         "Y[Y > 1] = 1\n",
         "\n",
         "# Split into training and test data\n",
-        "x_train = X[:1200]\n",
-        "y_train = Y[:1200]\n",
-        "x_test = X[1200:]\n",
-        "y_test = Y[1200:]\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, shuffle=False)\n",
         "\n",
         "# Scale inputs and keep sparcity\n",
         "max_abs_scaler = MaxAbsScaler()\n",
         "X_train_maxabs = max_abs_scaler.fit_transform(x_train)\n",
-        "X_test_maxabs = max_abs_scaler.transform(x_test)\n",
-        "\n",
-        "# print(max_abs_scaler.scale_) # Used for scaling future inputs"
+        "X_test_maxabs = max_abs_scaler.transform(x_test)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1lPTuSNEhgH9",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Build and Train the Model\n",
+        "\n",
+        "We are using a Seqeuntial model with Dense and Dropout layers"
+      ]
     },
     {
       "cell_type": "code",
@@ -429,6 +450,32 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w0fvZvGAjJ1O",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Evaluating the Model\n",
+        "\n",
+        "### Model Stats\n",
+        "\n",
+        "- Test Loss = .068 - .078\n",
+        "\n",
+        "- Test Accuracy = 40%\n",
+        "\n",
+        "This means that the model is on average +/- 7 HP of the fight outcome. Given the small training sample, this is reasonable.\n",
+        "\n",
+        "### Data Problems\n",
+        "\n",
+        "There are two crucial issues with the data that is available\n",
+        "\n",
+        "1. There is not enough data (only 2000 training examples for 975 parameters)\n",
+        "\n",
+        "1. The data is inherently noisy. The same fight in the game could have many different outcomes, so this is a problem that needs a lot of data to make up for the noise"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "F1Nga2iI2nnf",
@@ -436,14 +483,47 @@
         "colab": {}
       },
       "source": [
-        "# Manually looking at test predictions vs actual number\n",
-        "num_test = 50\n",
-        "pred = model.predict(X_test_maxabs[:num_test])\n",
-        "pred_actual = y_test[:num_test]\n",
-        "pred_actual = pred_actual[..., np.newaxis]\n",
-        "out = np.concatenate((pred, pred_actual), axis=1)\n",
-        "np.set_printoptions(precision=3, suppress=True)\n",
-        "print(out)"
+        "def inspect_test_cases():\n",
+        "  \"\"\"\n",
+        "  For manually looking at test predictions vs actual number\n",
+        "  \"\"\"\n",
+        "  num_test = 50\n",
+        "  pred = model.predict(X_test_maxabs[:num_test])\n",
+        "  pred_actual = y_test[:num_test]\n",
+        "  pred_actual = pred_actual[..., np.newaxis]\n",
+        "  out = np.concatenate((pred, pred_actual), axis=1)\n",
+        "  np.set_printoptions(precision=3, suppress=True)\n",
+        "  print(out)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jm3SjKvhkmhp",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Save the Model\n",
+        "\n",
+        "Save the model to be loaded into the game to be used in a mod!\n",
+        "\n",
+        "Save the scale used to transform the inputs so the same transformation occurs on inputs used for prediction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5cdL-3DClRN4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.save(\"STSFightPredictor\")\n",
+        "\n",
+        "with open('scale.json', 'w') as out_file:\n",
+        "  json.dump(max_abs_scaler.scale_.tolist(), out_file)"
       ],
       "execution_count": 0,
       "outputs": []
