--- a/STSFightPredictor.ipynb
+++ b/STSFightPredictor.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrku46nux6mIaO5z5CFJ46",
+      "authorship_tag": "ABX9TyMUnm7mY8pL9wA+4TEzmbft",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,9 +117,10 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
-        "import re"
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "import re\n",
+        "import tensorflow as tf"
       ],
       "execution_count": null,
       "outputs": []
@@ -336,11 +337,62 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "mJZXF8A_BqHY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Less than 10 samples of 50 000 affected by limits\n",
+        "NUM_CARDS_FOR_EMB = 45\n",
+        "NUM_RELICS_FOR_EMB = 25\n",
+        "card_encoder = LabelEncoder()\n",
+        "card_encoder.fit(ALL_CARDS)\n",
+        "relic_encoder = LabelEncoder()\n",
+        "relic_encoder.fit(ALL_RELICS)\n",
+        "encounter_encoder = LabelEncoder()\n",
+        "encounter_encoder.fit(ALL_ENCOUNTERS)\n",
+        "\n",
+        "def encode_sample_embedding_with_loop(sample):\n",
+        "  \"\"\"\n",
+        "  Encode a single sample into a 1D vector. Uses a label encoder for cards, relics, and encounters.\n",
+        "  To be used with the model with embedding layers\n",
+        "  \"\"\"\n",
+        "  # Zap = 714 after the +1\n",
+        "  cards = np.array(sample['cards'])\n",
+        "  generalize_strikes_and_defends(cards)\n",
+        "  enc_cards = card_encoder.transform(cards)\n",
+        "  enc_cards += 1\n",
+        "  enc_cards = enc_cards.reshape(1, -1)\n",
+        "  enc_cards = tf.keras.preprocessing.sequence.pad_sequences(enc_cards, maxlen=NUM_CARDS_FOR_EMB, padding='post', truncating='post')\n",
+        "\n",
+        "  relics = np.array(sample['relics'])\n",
+        "  enc_relics = relic_encoder.transform(relics)\n",
+        "  enc_relics += 1\n",
+        "  enc_relics = enc_relics.reshape(1, -1)\n",
+        "  enc_relics = tf.keras.preprocessing.sequence.pad_sequences(enc_relics, maxlen=NUM_RELICS_FOR_EMB, padding='post', truncating='post')\n",
+        "\n",
+        "  encounter = np.array(sample['enemies'])\n",
+        "  enc_encounter = encounter_encoder.transform([encounter])\n",
+        "  enc_encounter = enc_encounter.reshape(1, -1)\n",
+        "\n",
+        "  num_and_bool_data = np.array([sample['max_hp'], sample['entering_hp'], sample['ascension'], int(sample['potion_used'] == 'true')], ndmin=2)\n",
+        "\n",
+        "  return np.concatenate((enc_cards, enc_relics, enc_encounter, num_and_bool_data), axis=None)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "1SaM_GSp3N-V",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "# Set to True to test embedding experiments\n",
+        "USE_EMBEDDING = False\n",
+        "\n",
         "def preprocess_with_loop(data, log=True, log_freq=1000):\n",
         "  \"\"\"\n",
         "  Pre-processes the data one sample at a time using loops.\n",
@@ -357,7 +409,11 @@
         "    if log and i % log_freq == 0:\n",
         "      print(f'{((i / len(data)) * 100):.1f} % complete. => {i} of {len(data)}')\n",
         "\n",
-        "    processed_samples.append(encode_sample_with_loop(sample))\n",
+        "    if USE_EMBEDDING:\n",
+        "      processed_samples.append(encode_sample_embedding_with_loop(sample))\n",
+        "    else:\n",
+        "      processed_samples.append(encode_sample_with_loop(sample))\n",
+        "    \n",
         "    y.append(sample['damage_taken'])\n",
         "  X = np.vstack(processed_samples)\n",
         "  Y = np.array(y, dtype='float64')\n",
@@ -386,17 +442,18 @@
         "colab": {}
       },
       "source": [
-        "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers\n",
+        "from keras.layers import Input, Dense, Dropout, Concatenate, Average, Embedding, Lambda\n",
+        "from keras.layers.merge import concatenate\n",
+        "from keras.models import Model, Sequential\n",
         "from sklearn.preprocessing import MaxAbsScaler\n",
         "from sklearn.model_selection import train_test_split\n",
         "import datetime, os\n",
         "\n",
         "%load_ext tensorboard\n",
         "\n",
-        "!pip install -U keras-tuner\n",
-        "import kerastuner as kt"
+        "# !pip install -U keras-tuner\n",
+        "# import kerastuner as kt"
       ],
       "execution_count": null,
       "outputs": []
@@ -430,13 +487,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4aP5ztxxzjeh",
+        "id": "C_XSPY82uG1k",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def scale_and_split(X_data, Y_data):\n",
+        "def scale_X(X_data):\n",
+        "  \"\"\"\n",
+        "  Used with one hot encoded model\n",
+        "  \"\"\"\n",
         "  X_copy = np.copy(X_data)\n",
+        "  max_abs_scaler = MaxAbsScaler()\n",
+        "  X_maxabs = max_abs_scaler.fit_transform(X_copy)\n",
+        "  with open('input_scales.json', 'w') as out_file:\n",
+        "    json.dump(max_abs_scaler.scale_.tolist(), out_file)\n",
+        "  return X_maxabs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A6dxcCpPtxwW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def scale_Y(Y_data):\n",
         "  Y_copy = np.copy(Y_data)\n",
         "\n",
         "  # Scale Y\n",
@@ -446,21 +524,47 @@
         "  Y_copy[Y_copy < -1] = -1 # Healing (negative damage)\n",
         "  # Y_copy[Y_copy < 0] = 0 # No healing\n",
         "\n",
-        "  Y_copy[Y_copy > 1] = 1 # Cap damage taken at 100\n",
+        "  # Cap damage taken at 100\n",
+        "  Y_copy[Y_copy > 1] = 1\n",
+        "  return Y_copy"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4aP5ztxxzjeh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# def scale_and_split(X_data, Y_data):\n",
+        "#   X_copy = np.copy(X_data)\n",
+        "#   Y_copy = np.copy(Y_data)\n",
         "\n",
-        "  # Split into training and test data\n",
-        "  x_train, x_test, y_train, y_test = train_test_split(X_copy, Y_copy, test_size=0.33, shuffle=False)\n",
+        "#   # Scale Y\n",
+        "#   Y_copy /= 100\n",
         "\n",
-        "  # Scale inputs and keep sparcity\n",
-        "  max_abs_scaler = MaxAbsScaler()\n",
-        "  X_train_maxabs = max_abs_scaler.fit_transform(x_train)\n",
-        "  X_test_maxabs = max_abs_scaler.transform(x_test)\n",
+        "#   # To allow healing (negative damage), uncomment `Y[Y < -1] = -1` and comment out `Y[Y < 0] = 0`\n",
+        "#   Y_copy[Y_copy < -1] = -1 # Healing (negative damage)\n",
+        "#   # Y_copy[Y_copy < 0] = 0 # No healing\n",
         "\n",
-        "  # Save the scale used to transform the inputs so the same transformation occurs on inputs used for prediction\n",
-        "  with open('input_scales.json', 'w') as out_file:\n",
-        "    json.dump(max_abs_scaler.scale_.tolist(), out_file)\n",
+        "#   Y_copy[Y_copy > 1] = 1 # Cap damage taken at 100\n",
         "\n",
-        "  return X_train_maxabs, X_test_maxabs, y_train, y_test"
+        "#   # Split into training and test data\n",
+        "#   x_train, x_test, y_train, y_test = train_test_split(X_copy, Y_copy, test_size=0.33, shuffle=False)\n",
+        "\n",
+        "#   # Scale inputs and keep sparcity\n",
+        "#   max_abs_scaler = MaxAbsScaler()\n",
+        "#   X_train_maxabs = max_abs_scaler.fit_transform(x_train)\n",
+        "#   X_test_maxabs = max_abs_scaler.transform(x_test)\n",
+        "\n",
+        "#   # Save the scale used to transform the inputs so the same transformation occurs on inputs used for prediction\n",
+        "#   with open('input_scales.json', 'w') as out_file:\n",
+        "#     json.dump(max_abs_scaler.scale_.tolist(), out_file)\n",
+        "\n",
+        "#   return X_train_maxabs, X_test_maxabs, y_train, y_test"
       ],
       "execution_count": null,
       "outputs": []
@@ -506,9 +610,27 @@
         "logdir = os.path.join(\"logs\", datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
         "tensorboard_callback = tf.keras.callbacks.TensorBoard(logdir, histogram_freq=1)\n",
         "\n",
-        "X_train, X_test, Y_train, Y_test = scale_and_split(X, Y)\n",
+        "X_scaled = scale_X(X)\n",
+        "Y_scaled = scale_Y(Y)\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y_scaled, test_size=0.33, shuffle=False)\n",
         "\n",
         "history = model.fit(X_train, Y_train, batch_size=32, epochs=5, validation_split=0.2, callbacks=[tensorboard_callback])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h0bK-_jVZGEQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_scores = model.evaluate(X_test, Y_test, verbose=2)\n",
+        "\n",
+        "print(\"Test loss:\", test_scores[0])\n",
+        "print(\"Test accuracy:\", test_scores[1])"
       ],
       "execution_count": null,
       "outputs": []
@@ -548,22 +670,6 @@
         "\n",
         "1. The model trained on Jorbs data predicts values close to 0 a lot. This is probably due to Jorbs being a very good player and can take very little damage (or heal) in a lot of fights."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "h0bK-_jVZGEQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "test_scores = model.evaluate(X_test, Y_test, verbose=2)\n",
-        "\n",
-        "print(\"Test loss:\", test_scores[0])\n",
-        "print(\"Test accuracy:\", test_scores[1])"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -744,6 +850,132 @@
         "    sb += '0f, '\n",
         "  sb += '};'\n",
         "  print(sb)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2j1R0um7Uwlr",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Embedding Experiments\n",
+        "\n",
+        "The current model has a good training loss curve but the validation curve looks more like a straight line than a curve. This problem is often related to overfit. Rather than one hot encoding cards, relics, and encounter, an experiment with Embedding layers was run to try to reduce overfit.\n",
+        "\n",
+        "An Embedding layer can be used to learn relations between cards. The general idea is to encode cards, relics, and enemies as vectors instead of a single numbers.\n",
+        "\n",
+        "Because there are a variable number of cards and relics a player can have, the average of card vectors and the average of relic vectors was taken. These averages can be passed into a Dense layer."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bVxFXMT9V9BO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Custom average function to ignore masked layers\n",
+        "def avg_labmda_fun(x, mask):\n",
+        "  mask_cast = keras.backend.cast(mask, 'float32')\n",
+        "  expanded = keras.backend.expand_dims(mask_cast)\n",
+        "  count = tf.keras.backend.sum(mask_cast)\n",
+        "  sum = keras.backend.sum(expanded * x, axis=1)\n",
+        "  return sum / count"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdltqaZu5yC_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def train_embedding_model():\n",
+        "  # Embed cards and average output vectors\n",
+        "  card_input = Input(shape=(NUM_CARDS_FOR_EMB, ), name='cards_input')\n",
+        "  card_embedding = Embedding(len(ALL_CARDS) + 1, 26, mask_zero=True)(card_input)\n",
+        "  card_average = Lambda(avg_labmda_fun, output_shape=(26, ), mask=None)(card_embedding)\n",
+        "\n",
+        "  # Embed relics and average output vectors\n",
+        "  relic_input = Input(shape=(NUM_RELICS_FOR_EMB, ), name='relics_input')\n",
+        "  relic_embedding = Embedding(len(ALL_RELICS) + 1, 13, mask_zero=True)(relic_input)\n",
+        "  relic_average = Lambda(avg_labmda_fun, output_shape=(13, ), mask=None)(relic_embedding)\n",
+        "\n",
+        "  # Embed encounter. There is only a single encounter but the lambda is used to reshape the vector\n",
+        "  encounter_input = Input(shape=(1, ), name='encounter_input')\n",
+        "  encounter_embedding = Embedding(len(ALL_ENCOUNTERS), 8)(encounter_input)\n",
+        "  encounter_layer_reshape = Lambda(lambda x: keras.backend.mean(x, axis=1), output_shape=(8, ))(encounter_embedding)\n",
+        "\n",
+        "  numbers_input = Input(shape=(4, ), name='num_and_bool_input')\n",
+        "\n",
+        "  # Concatenate before sending to Dense layers\n",
+        "  merged = concatenate([card_average, relic_average, encounter_layer_reshape, numbers_input])\n",
+        "\n",
+        "  dense_1 = Dense(40, activation='relu')(merged)\n",
+        "  drop_out_1 = Dropout(.1)(dense_1)\n",
+        "  dense_out = Dense(1)(drop_out_1)\n",
+        "\n",
+        "\n",
+        "  emb_model = Model(inputs=[card_input, relic_input, encounter_input, numbers_input], output=dense_out)\n",
+        "  emb_model.summary()\n",
+        "\n",
+        "  emb_model.compile(\n",
+        "      optimizer=keras.optimizers.RMSprop(learning_rate=.0001),\n",
+        "      loss='mse',\n",
+        "      metrics=['mae'])\n",
+        "\n",
+        "  logdir = os.path.join(\"logs\", datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
+        "  tensorboard_callback = tf.keras.callbacks.TensorBoard(logdir, histogram_freq=1)\n",
+        "\n",
+        "  Y_scaled = scale_Y(Y)\n",
+        "  X_train, X_test, Y_train, Y_test = train_test_split(X, Y_scaled, test_size=0.33, shuffle=False)\n",
+        "\n",
+        "  cards_col = X_train[:, 0:NUM_CARDS_FOR_EMB]\n",
+        "  relic_index = NUM_CARDS_FOR_EMB + NUM_RELICS_FOR_EMB\n",
+        "  relics_col = X_train[:, NUM_CARDS_FOR_EMB:relic_index]\n",
+        "  encounter_index = relic_index + 1\n",
+        "  encounter_col = X_train[:, relic_index:encounter_index]\n",
+        "  num_and_bool_col = X_train[:, encounter_index:]\n",
+        "  max_abs_scaler = MaxAbsScaler()\n",
+        "  num_and_bool_col = max_abs_scaler.fit_transform(num_and_bool_col)\n",
+        "\n",
+        "  history = emb_model.fit(x={'cards_input': cards_col, 'relics_input': relics_col, 'encounter_input': encounter_col, 'num_and_bool_input': num_and_bool_col}, y=Y_train, batch_size=32, epochs=20, validation_split=0.2)\n",
+        "  return emb_model\n",
+        "\n",
+        "if USE_EMBEDDING:\n",
+        "  emb_model = train_embedding_model()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i87upB6aacyd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def inspect_embeddings():\n",
+        "  embeddings = emb_model.layers[3].get_weights()[0]\n",
+        "  embeddings.shape\n",
+        "  weights = dict()\n",
+        "  for i, name in enumerate(ALL_CARDS):\n",
+        "    weights[name] = embeddings[i]\n",
+        "    # print(f'{name}:\\t{embeddings[i]}')\n",
+        "\n",
+        "  print(weights['Pommel Strike'])\n",
+        "  print(weights['Sucker Punch'])\n",
+        "\n",
+        "if USE_EMBEDDING:\n",
+        "  inspect_embeddings()"
       ],
       "execution_count": null,
       "outputs": []
